--- a/src/PaintGUI/JFX.css
+++ b/src/PaintGUI/JFX.css
@@ -2,6 +2,10 @@
 	-fx-base: rgb(100, 100, 100);
 }
 
+.color-picker {
+	-fx-color-label-visible: false
+}
+
 .button {
 	-fx-backround-color: #000000
 }
